--- a/css/style.css
+++ b/css/style.css
@@ -2469,6 +2469,7 @@ a.signup-fb:hover {
     margin-left: -8px;
     background: #fff;
     top: 45%;
+    left: 50%;
 }
 .modal-content.sign-option .modal-body {
     padding: 15px 50px 30px 50px;
