--- a/css/product_detail.css
+++ b/css/product_detail.css
@@ -365,6 +365,7 @@ p.font-weight-bold.grey.review_ques {
 .thumbnail_image_detail {
     overflow-x: scroll;
     display: flex;
+    height: 100px;
 }
 
 .thumbnail_image_detail img{
@@ -701,9 +702,12 @@ p.view_ount i.icon-thumbs-up {
     }
     .prd_link span{margin:5px 0}
     .container.abt_des,.container.rec_sec {
-        padding: 0px 30px;
+        padding: 0px 10px;
     }
-
+    .shop_des_col {
+        padding-left: 25px;
+        padding-right: 25px;
+    }
     .rec_sec .col-md-8.col-sm-4.col-xs-12.border-right {
         border-right: 0!important;
         margin-bottom: 20px;
@@ -714,11 +718,16 @@ p.view_ount i.icon-thumbs-up {
         padding: 0;
         width: auto;
         padding-right: 10px;
+        padding-top: 5px;
     }
 
     .row.tp_sr div {
 
         margin-bottom: 20px;
+    }
+    .specification-body ul {
+        padding-left: 20px;
+        list-style: none;
     }
 
     .row.pr_sr .rw_rslt div{margin-bottom:10px}
@@ -760,6 +769,15 @@ p.view_ount i.icon-thumbs-up {
     }
     .rev_search_texting_text {
         margin-top: 25px;
+    }
+    .shop_review .shp_rview_sec {
+        padding-left: 25px;
+        padding-right: 25px;
+        margin-bottom: 40px;
+    }
+    .shop_review .rc_drp {
+        margin-top: 15px;
+        padding-right: 15px;
     }
 }
 
