--- a/css/product_detail.css
+++ b/css/product_detail.css
@@ -779,6 +779,10 @@ p.view_ount i.icon-thumbs-up {
         margin-top: 15px;
         padding-right: 15px;
     }
+    .product_deta_section h2.tite {
+        margin-bottom: 30px;
+        margin-top: 50px;
+    }
 }
 
 @media screen and (min-width:768px) and (max-width:1024px) {
