--- a/css/product.css
+++ b/css/product.css
@@ -668,12 +668,12 @@ section.shop_banner {
         padding-right: 0;
         padding-left: 15px
     }
-    .product_list_pod .grid-arrival {
+/*    .product_list_pod .grid-arrival {
         height: 125px;
     }
     .product_list_pod .grid-img {
         height: 125px !important;
-    }
+    }*/
 
 
 }
