--- a/css/product_detail.css
+++ b/css/product_detail.css
@@ -131,7 +131,10 @@
     margin-left: 10px;
 }
 .prd_link span{display: inline-block;margin-left: 20px}
-.mp_sec .dtl_img{margin-top:20px}
+.mp_sec .dtl_img{
+    margin-top:20px;
+    height: 170px;
+ }
 /*.container.ad_link{
 padding:0;
 }*/
@@ -681,8 +684,33 @@ p.view_ount i.icon-thumbs-up {
 }
 
 
+ul.a-unordered-list.a-vertical.a-spacing-none {
+    padding-left: 15px;
+    margin-top: 15px;
+    line-height: 25px;
+}
 
+.item_details table {
+    margin-top: 15px;
+}
 
+.item_details table tr td.label {
+    color: #000;
+    padding: .2em 12px .3em 0px;
+    font-size: 100%;
+    font-weight: 500;
+    line-height: 1.5;
+    text-align: left;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+}
+
+.item_details table tr td.value {
+    color: #000;
+    padding: .2em 12px .3em;
+    font-size: 100%;
+}
 
 
 
