--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,9 @@ p {
 a {
     color: #1f9cd7
 }
-
+input[type='file'].form-control {
+    padding: 0px 12px;
+}
 header {
     padding-bottom: 10px;
     background-color: #fff;
@@ -2021,7 +2023,6 @@ h2.text-center.alegreya::before {
 }
 
 .about_the_card_img {
-    background-image: url(../images/About%20us.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -2423,8 +2424,8 @@ button.close{
 
 .login-modal .form-control-placeholder {
     position: absolute;
-    top: 0px;
-    padding: 7px 0 0 13px;
+    top: 10px;
+    padding: 1px 0 0 13px;
     transition: all 200ms;
     opacity: 0.5; 
     color:#b8b8b8;
@@ -2437,12 +2438,13 @@ button.close{
     font-size: 75%;
     transform: translate3d(0, -25%, 0);
     opacity: 1;
+    top: 6px;
 }
 .login-modal .form-group input {
     font-size: 14px;
     color: #6e6e6e;
     margin-bottom: 5px;
-    height: 38px;
+    height: 45px;
     font-size: 14px;
     border: 1px solid #ccc;
     font-family: 'Calibri', sans-serif;
@@ -3869,7 +3871,7 @@ section.site_map_content {
     #searchModal .modal-dialog {
         width: 100%;
     }
-        .advanced-modal-head.modal-header .close {
+    .advanced-modal-head.modal-header .close {
         right: 10px;
     }
 }
@@ -4256,15 +4258,15 @@ section.site_map_content {
 
     .looking input {
         padding: 0px;
-        width: 66% !important;
+        width: 58% !important;
     }
 
     .where_in label {
-        width: 39%;
+        width: 40%;
     }
 
     .where_in .input-group {
-        width: 60%;
+        width: 58%;
     }
 
     .submenu .col-md-8 {
@@ -4273,6 +4275,16 @@ section.site_map_content {
 
     .directors .grid-img {
         height: 193px;
+    }
+    .looking label {
+        padding: 0 10px 0 20px;
+        width: 40% !important;
+    }
+    .app_store_pod {
+        height: 500px;
+    }
+    .customer_pod {
+        height: 500px;
     }
 }
 
