--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ img.img-responsive:hover {
 
 .dropdown {
     position: relative;
-    display: inline-block;
+  /*  display: inline-block;*/
     margin-right: 10px;
 }
 
@@ -313,10 +313,40 @@ input[type='file'].form-control {
     padding-right: 0;
 }
 
-ul#othersubmenuhead {
-    height: 500px;
-    overflow-x: scroll;
+.dropdown-submenu{ position: relative; }
+.dropdown-submenu>.dropdown-menu{
+  top:0;
+  left:100%;
+  margin-top:-6px;
+  margin-left:-1px;
+  -webkit-border-radius:0 6px 6px 6px;
+  -moz-border-radius:0 6px 6px 6px;
+  border-radius:0 6px 6px 6px;
 }
+.dropdown-submenu>a:after{
+  display:block;
+  content:" ";
+  float:right;
+  width:0;
+  height:0;
+  border-color:transparent;
+  border-style:solid;
+  border-width:5px 0 5px 5px;
+  border-left-color:#cccccc;
+  margin-top:5px;margin-right:-10px;
+}
+.dropdown-submenu:hover>a:after{
+  border-left-color:#555;
+}
+.dropdown-submenu.pull-left{ float: none; }
+.dropdown-submenu.pull-left>.dropdown-menu{
+  left: -100%;
+  margin-left: 10px;
+  -webkit-border-radius: 6px 0 6px 6px;
+  -moz-border-radius: 6px 0 6px 6px;
+  border-radius: 6px 0 6px 6px;
+}
+
 
 .upar {
     background: #FFF url(../images/bk_tp.png)no-repeat center;
